# Multi-Cluster-TOSCA-Orchestrator

./: .gitignore  LICENSE  README.md  api.yaml  compose.yml
TORCH_v2/: README.md
TORCH_v2/bpmn-plans/bpmn_plans_v2_3_8/: AWAITNOFICATIONS.bpmn20.xml  BPMN4TOSCA-OVERALLXX.bpmn20.xml  CREATEDEPLOYMENTUNIT.bpmn20.xml  CREATESERVICEX.bpmn20.xml  RECEIVEMESSAGE.bpmn20.xml
TORCH_v2/dashboard/: Dockerfile  README.md  dashboard-entrypoint.sh  docker-compose-torch-dashboard.yaml
TORCH_v2/dashboard/dashboard/public/json4tosca-parser/: setup.cfg  tosca_parser.py
TORCH_v2/dashboard/dashboard/public/json4tosca-parser/toscaparser/: functions.py  processor.py  template_processor.py  torch_parser.py
TORCH_v2/dashboard/dashboard/public/json4tosca-parser/toscaparser/elements/: TOSCA_definition_1_0.yaml  capabilitytype.py  entity_type.py  nodetype.py  statefulentitytype.py
TORCH_v2/dashboard/dashboard/public/json4tosca-parser/toscaparser/extensions/torch/: TOSCA_torch_definition_1_0_3.yaml  tosca_simple_profile_for_torch_1_0_0.py
TORCH_v2/dashboard/dashboard/public/json4tosca-parser/toscaparser/torch_handlers/: capabilities_handler.py  properties_handler.py  requirements_handler.py
TORCH_v2/dashboard/dashboard/public/json4tosca-parser/toscaparser/utils/: merger.py
TORCH_v2/model/: Dockerfile  README.md  docker-compose-compilation-env.yaml
TORCH_v2/service-layer/: Dockerfile  entrypoint.sh  prepare_maven_repo.sh
distance-time-calculator/: Dockerfile  README.md  commons.py  main.py  requirements.txt
distance-time-calculator/src/: distance_matrix.py  distance_matrix_resource.py  logging_config.py  problem_solver.py  storage.py
georeference/: Dockerfile  README.md  commons.py  main.py  requirements.txt
georeference/src/: georeference.py  georeference_resource.py  problem_solver.py  storage.py
minio/: Dockerfile  README.md  minio-init.sh
orchestrator/: Dockerfile  README.md  commons.py  main.py  requirements.txt
orchestrator/src/: logging_config.py  orchestrator_resource.py
(+137 files in other folders)
