[metadata]
name = tosca-parser
url = https://launchpad.net/tosca-parser
summary = Parser for TOSCA Simple Profile in YAML.
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = http://docs.openstack.org/tosca-parser/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    toscaparser
package_data =
    toscaparser = elements/TOSCA_definition_1_0.yaml
    toscaparser = extensions/nfv/*.yaml
    toscaparser = extensions/mec/*.yaml
    toscaparser = extensions/torch/*.yaml

[entry_points]
console_scripts =
    tosca-parser = toscaparser.shell:main
    torch-tosca-processor = toscaparser.processor:processToscaTemplate
toscaparser.extensions =
    tosca_simple_profile_for_nfv_1_0_0 = toscaparser.extensions.nfv.tosca_simple_profile_for_nfv_1_0_0:NfvProfile_1_0_0
    tosca_simple_profile_for_mec_1_0_0 = toscaparser.extensions.mec.tosca_simple_profile_for_mec_1_0_0:MecProfile_1_0_0
    tosca_simple_profile_for_torch_1_0_0 = toscaparser.extensions.torch.tosca_simple_profile_for_torch_1_0_0:TorchProfile_1_0_0

[compile_catalog]
directory = toscaparser/locale
domain = toscaparser

[update_catalog]
domain = toscaparser
output_dir = toscaparser/locale
input_file = toscaparser/locale/toscaparser.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = toscaparser/locale/toscaparser.pot
